fix footer spacing

--- a/apps/profiles/static/profiles/css/profiles.css
+++ b/apps/profiles/static/profiles/css/profiles.css
@@ -2,6 +2,10 @@ body {
     background-color: var(--primary-blue);
 }
 
+.mainContainer {
+    margin-bottom: 1.5rem;
+}
+
 .rowContainer {
     display: flex;
     justify-content: center;
