--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,7 +31,7 @@ header {
 }
 
 .navbar {
-    padding: 5px 2rem;
+    padding: 5px .5rem;
     background-color: white;
 }
 
@@ -78,6 +78,7 @@ footer {
     bottom: 0;
     width: 100%;
     min-height: 100px;
+    margin-top: 1rem;
 }
 
 .footerLogo {
@@ -96,4 +97,20 @@ footer {
     font-weight: 900;
     text-decoration: none;
     color: black;
+}
+
+
+/* Media Queries */
+/* Media Queries */
+
+@media (max-width: 500px) {
+
+    .footerLogoText {
+        margin-right: 0;
+    }
+
+    .copyrightInfo {
+        text-align: center;
+    }
+    
 }
